2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGFontManager.m (load_cache),
	* Tools/font_cacher.m (-writeCacheTo): Increase version number of
	font format, as font mask values have changed.

2007-08-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_setupRootWindow): Set lastTime to
	CurrentTime not 1 to get setinputfocus working for the first
	activation of the application.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_checkWMSupports:,
	-_tryRequestFrameExtents:): Correct minor errors.
	* Source/art/ftfont.m (-coveredCharacterSet): Protect against
	illegal characters.

2007-08-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m: Add more EWMH methods and helper
	methods for them.
	* Tools/xpbs.m: Simplify dragging support code.

2007-08-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m (-coveredCharacterSet): Correct code.
	Patch by Yen-Ju Chen <yjchenx@gmail.com>.

2007-08-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m (-coveredCharacterSet): Use local FT_Size
	variable instead of ivar. The ivar is sometimes invalid.
	Cleaned up compiler warnings.

2007-08-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServer.m (+initializeBackend): Handle SIGINT by
	calling ([NSApp terminate: NSApp]) to shut down cleanly.

2007-07-03 Sergii Stoian <soyan255@gmail.com>

	* Source/cairo/CairoGState.m
	  (-_setPoint): Adjust point.
	  (-_adjustPath:): Optimize and cleanup.
	  (-compositeGState:fromRect:toPoint:op:fraction:): Adjust toPoint.

2007-07-02 Sergii Stoian <soyan255@gmail.com>

	* Source/cairo/CairoGState.m
	  (-DPSshow:): Apply correct scale and translate transformation matrix.
	  (-DPSsetstrokeadjust:): Implement.
	  (-DPSinitgraphics): Set _strokeadjust to 1 by default.
	  (-_adjustPath:): Implement new method that place the path to pixel
	  boundaries.
	  (-_setPath:): Change method definition adding fillOrClip argument.
	  Use _adjustPath: method.